--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -13,7 +13,7 @@ a.md-button:hover:not([disabled]), .md-button:hover:not([disabled]) {
 	background-color:#fff !important;
 }
 .search-bg {
-	background-image: url('../images/fruti.gif');
+	background-image: url('../images/fruit.gif');
 	height:300px;
 	background-size:100%;
 	background-repeat:no-repeat;
