[ADSBPA-66] Changing nav bar and navigation between pages.

--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -1,5 +1,8 @@
-body {color:#575A5C;}
-.logo {width:20%;padding:10px;}
+body {
+	color:#575A5C;
+	padding-top: 50px;
+}
+.logo {width:15%;padding:5px;}
 a.md-button:hover:not([disabled]), .md-button:hover:not([disabled]) {
 	background-color:#66a523  !important;
 	color:#fff;
@@ -10,13 +13,14 @@ a.md-button:hover:not([disabled]), .md-button:hover:not([disabled]) {
 	height:45px;
 }
 .sf-header {
-	background-color:#fff !important;
+	background-color:#66a523  !important;
 }
 .search-bg {
 	background-image: url('../images/fruit.gif');
 	height:300px;
-	background-size:100%;
-	background-repeat:no-repeat;
+	width: 100%;
+	/*background-size:100%;
+	background-repeat:no-repeat;*/
 }
 .searchbar {
 	border:none;
@@ -44,3 +48,9 @@ section h4 {
 .search-results {background-color:#EFEFEF;}
 [layout-padding], [layout-padding] > [flex], [layout-padding] > [flex-gt-sm], [layout-padding] > [flex-md], [layout-padding] > [flex-lt-lg] {padding:0;}
 .green {background-color:}
+.hideInput{
+	opacity: 0;
+}
+.form-margin{
+	padding-top: 10px;
+}
