--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -48,9 +48,21 @@ section h4 {
 .search-results {background-color:#EFEFEF;}
 [layout-padding], [layout-padding] > [flex], [layout-padding] > [flex-gt-sm], [layout-padding] > [flex-md], [layout-padding] > [flex-lt-lg] {padding:0;}
 .green {background-color:}
+
+
+.btn-primary {border:none;background-color:#80b636; }
+.btn-primary:hover {border:none;background-color:#66a523;}
+
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {background-color:#80b636;border-color:#80b636;}
+
+.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {color:#80b636}
+.pagination > li > a {color:#80b636}
+
+a.md-button.md-primary, .md-button.md-primary {color:#fff;}
+
+.form-margin {padding-top:30px;}
+
 .transparent {
 	opacity: 0;
 }
-.form-margin{
-	padding-top: 10px;
-}
+
