--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -3,7 +3,8 @@ body {
 	padding-top: 50px;
 }
 .logo {
-	width:15%;padding:5px;
+	height: 40px;
+	margin-top: -10px;
 }
 
 .fa-search{
@@ -32,7 +33,7 @@ body {
 	font-size:20px;
 	margin-top:-20px;
 }
-.inner {margin:0 auto;position:relative;top:100px;width:500px}
+.inner {margin:0 auto;position:relative;top:100px;}
 .outer {width:100%;margin-top:100px;}
 
 section h4 {
