--- a/client/scripts/components/directives/loading-spinner-directive/loading-spinner.html
+++ b/client/scripts/components/directives/loading-spinner-directive/loading-spinner.html
@@ -1,4 +1,4 @@
-<div class="loading-spinner">
+<center ng-show="loading" class="loading-spinner">
   <i class="fa fa-spinner fa-spin fa-5x"></i>
   <h3>Loading...</h3>
-</div>
+</center>
