--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -61,6 +61,8 @@ section h4 {
 	z-index: 2000;
 	top: 50%;
 	left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	padding: 24px 30px;
 	border-radius: 12px;
