--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -56,18 +56,23 @@ section h4 {
     transition:all 0.3s ease-in-out 0s;
 }
 
-.loading-spinner {
-	position: fixed;
-	z-index: 2000;
-	top: 50%;
-	left: 50%;
+.loading-spinner-relative {
+  position: relative;
+  color: rgba(0, 0, 0, .8);
+}
+
+.loading-spinner-fixed {
+  position: fixed;
+  z-index: 2000;
+  top: 50%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	padding: 24px 30px;
-	border-radius: 12px;
-	background-color: rgba(0, 0, 0, .8);
-	color: white;
+  transform: translate(-50%, -50%);
+  padding: 24px 30px;
+  border-radius: 12px;
+  background-color: rgba(0, 0, 0, .8);
+  color: white;
 }
 
 .slide:before {
