--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -2,20 +2,26 @@ body {
 	color:#575A5C;
 	padding-top: 50px;
 }
-.logo {
-	height: 40px;
-	margin-top: -10px;
+.logo {width:14%;padding:5px;}
+a.md-button:hover:not([disabled]), .md-button:hover:not([disabled]) {
+	background-color:#66a523  !important;
+	color:#fff;
 }
-
+.fa-search{
+	color:#fff;
+	background-color:#80b636;
+	height:45px;
+}
 .sf-header {
 	background-color:#66a523  !important;
 }
 .search-bg {
 	background-image: url('../images/fruit.gif');
-	height:300px;
+	height:350px;
 	width: 100%;
+	/*background-size:100%;
+	background-repeat:no-repeat;*/
 }
-
 .searchbar {
 	border:none;
 	border-radius:4px;
@@ -29,95 +35,87 @@ body {
 	font-size:20px;
 	margin-top:-20px;
 }
-.inner {margin:0 auto;position:relative;top:100px;}
+.md-button {background-color:#80b636;color: #fff;}
+.inner {margin:0 auto;position:relative;top:125px;width:500px}
 .inner h1 {margin:0;}
 .outer {width:100%;margin-top:100px;}
-
+.md-input-container.md-input-focused:not(.md-input-invalid) .md-input {
+	border: none !important;
+}
 section h4 {
 	color:#80b636 !important;
 }
 
 .search-results {background-color:#EFEFEF;}
+[layout-padding], [layout-padding] > [flex], [layout-padding] > [flex-gt-sm], [layout-padding] > [flex-md], [layout-padding] > [flex-lt-lg] {padding:0;}
 .green {background-color:}
 
 
 .btn-primary {border:none;background-color:#80b636; }
 .btn-primary:hover {border:none;background-color:#66a523;}
 
-.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {background-color:#80b636;border-color:#80b636;}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {background-color:#ee552a;border-color:#ee552a;}
 
-.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {color:#80b636}
-.pagination > li > a {color:#80b636}
+.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {color:#ee552a}
+.pagination > li > a {color:#ee552a}
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {color:#555;background-color:#fff;border:1px solid #ddd;}
+a.md-button.md-primary, .md-button.md-primary {color:#fff;}
 
 .form-margin {padding-top:30px;}
 
-.hidden {
-	/*opacity: 0;*/
-    transition:all 0.3s ease-in-out 0s;
+.transparent {
+	opacity: 0;
+	transition:all 0.3s ease-in-out 0s;
 }
-
-.loading-spinner-relative {
-  position: relative;
-  color: rgba(0, 0, 0, .8);
-}
-
-.loading-spinner-fixed {
-  position: fixed;
-  z-index: 2000;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  padding: 24px 30px;
-  border-radius: 12px;
-  background-color: rgba(0, 0, 0, .8);
-  color: white;
-}
-
 .slide:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left:0;
-    right:0;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
 }
 #title {
-    background-image: url("../images/fruit.gif");
-    background-attachment: fixed;
-    height:350px;
+  background-image: url("../images/fruit.gif");
+   background-attachment: fixed;
+   height:350px;  
 }
 .slide, .slide:before {
-    background: 50% 50% / cover;
+  background: 50% 50% / cover;  
 }
 .header {
-    text-align: center;
-    font-size: 175%;
-    color: #fff;
-    text-shadow: 0 2px 2px #000;
+  text-align: center;
+  font-size: 175%;
+  color: #fff;
+  text-shadow: 0 2px 2px #000;
 }
 .navbar-default {border-color:#66a523;}
 .btn-default {
-    background-color: #ee552a;
-    border-color: #ee552a;
-    color:#fff;
+	background-color: #ee552a;
+  	border-color: #ee552a;
+	color:#fff;
 }
 .btn-default:hover {
-    background-color: #d94a22;
-    border-color: #d94a22;
-    color:#fff;
+	background-color: #d94a22;
+  	border-color: #d94a22;
+	color:#fff;
 }
 .btn-default:focus, .btn-default.focus {
-    background-color: #ee552a !important;
-    border-color: #ee552a !important;
-    color:#fff !important;
+	background-color: #ee552a !important;
+  	border-color: #ee552a !important;
+	color:#fff !important;
 }
 .btn-default:active, .btn-default.active, .open > .dropdown-toggle.btn-default {
-    background-color: #ee552a !important;
-    border-color: #ee552a !important;
-    color:#fff !important;
+	background-color: #ee552a !important;
+  	border-color: #ee552a !important;
+	color:#fff !important;
 }
 input-group-btn {top:20px;}
 .form-group h1 {text-shadow:2px 2px 7px #222;font-size:3.5rem;font-weight:normal;margin:5px 0;line-height: 1.4}
 .btn-top {top:30px;}
+
+.md-dialog-container h3 {
+	background-color:#66A523;
+	color:#fff;
+	padding: 2px 0 2px 5px;
+}
