--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -2,7 +2,8 @@ body {
 	color:#575A5C;
 	padding-top: 50px;
 }
-.logo {width:14%;padding:5px;}
+.logo {width:60%;padding:5px;}
+.navbar-brand {padding:0px;}
 a.md-button:hover:not([disabled]), .md-button:hover:not([disabled]) {
 	background-color:#66a523  !important;
 	color:#fff;
